--- a/index.html
+++ b/index.html
@@ -2,10 +2,130 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>My first site</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="fonts/fonts.css">
 </head>
 	<body>
-		Hello World and Git!!!!!!
+		<header>
+			<div class="wrap">
+				<div class="logo">
+					<img src="img/logo.png" alt="logo" class="logo-img">
+				</div>
+				<div class="title-box">
+					<h1>Picture perfect</h1>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, sint dolore ut voluptate, accusantium autem quod nesciunt harum officiis.</p>
+				</div>
+				<div class="img__box"><img src="img/iPhone.png" alt="iphone"></div>
+			</div>
+		</header>
+		<main>
+			<div class="wrap">
+				<div class="content__box">
+					<div class="content__items">
+						<h5>Start something new</h5>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui vel nam, illo repudiandae blanditiis ipsum hic nihil ipsam beatae dignissimos dicta alias aliquam, voluptate excepturi, id iusto sint magnam distinctio!</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem excepturi pariatur, dicta molestias eligendi assumenda aut voluptas facilis? Ullam natus, quod tempore optio suscipit nesciunt alias similique blanditiis soluta!</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem excepturi pariatur, dicta molestias eligendi assumenda aut voluptas facilis? Ullam natus, quod tempore optio suscipit nesciunt alias similique blanditiis soluta!</p>
+					</div>
+					<div class="content__items">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem excepturi pariatur, dicta molestias eligendi assumenda aut voluptas facilis? Ullam natus, quod tempore optio suscipit nesciunt alias similique blanditiis soluta!</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem excepturi pariatur, dicta molestias eligendi assumenda aut voluptas facilis? Ullam natus, quod tempore optio suscipit nesciunt alias similique blanditiis soluta!</p>
+					</div>
+				</div>
+			</div>
+			<div class="info__box">
+					<div class="info__box__item item-1">
+						<div class="info__box__item-wrap">
+							<div class="info__box__item-title">Design quality</div>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem ducimus pariatur quia alias dolorem ipsum vitae laboriosam.</p>
+							<div class="info__box__item-link">
+								<a href="#">Find Out more <span>→</span></a>
+							</div>
+						</div>	
+					</div>
+					<div class="info__box__item item-2">
+						<div class="info__box__item-wrap">
+							<div class="info__box__item-title">Design quality</div>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem ducimus pariatur quia alias dolorem ipsum vitae laboriosam.</p>
+							<div class="info__box__item-link">
+								<a href="#">Find Out more <span>→</span></a>
+							</div>
+						</div>	
+					</div>
+					<div class="info__box__item item-3">
+						<div class="info__box__item-wrap">
+							<div class="info__box__item-title">Design quality</div>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem ducimus pariatur quia alias dolorem ipsum vitae laboriosam.</p>
+							<div class="info__box__item-link">
+								<a href="#">Find Out more <span>→</span></a>
+							</div>
+						</div>	
+					</div>
+					<div class="info__box__item item-4">
+						<div class="info__box__item-wrap">
+							<div class="info__box__item-title">Design quality</div>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem ducimus pariatur quia alias dolorem ipsum vitae laboriosam.</p>
+							<div class="info__box__item-link">
+								<a href="#">Find Out more <span>→</span></a>
+							</div>
+						</div>	
+					</div>
+				</div>
+				<div class="info__box">	
+					<div class="info__box__item item-5" style="flex: 0 0 800px">
+						<div class="info__box__item-wrap">
+							<div class="info__box__item-title">Design quality</div>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem ducimus pariatur quia alias dolorem ipsum vitae laboriosam.</p>
+							<div class="info__box__item-link">
+								<a href="#">Find Out more <span>→</span></a>
+							</div>
+						</div>
+						
+					</div>
+					<div class="info__box__item item-6">
+						<div class="info__box__item-wrap">
+							<div class="info__box__item-title">Design quality</div>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem ducimus pariatur quia alias dolorem ipsum vitae laboriosam.</p>
+							<div class="info__box__item-link">
+								<a href="#">Find Out more <span>→</span></a>
+							</div>
+						</div>	
+					</div>
+					<div class="info__box__item item-7">
+						<div class="info__box__item-wrap">
+							<div class="info__box__item-title">Design quality</div>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem ducimus pariatur quia alias dolorem ipsum vitae laboriosam.</p>
+							<div class="info__box__item-link">
+								<a href="#">Find Out more <span>→</span></a>
+							</div>
+						</div>	
+					</div>
+				</div>
+			<div class="wrap">	
+				<div class="details__box">
+					<h5>A look at the details</h5>
+					<div class="details__box-container">
+						<div class="details__box__items">
+							<h6>Web based</h6>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga modi repellat animi accusamus, non recusandae ducimus nam ipsam. Fugit mollitia quisquam officiis rem tempore quo temporibus, reprehenderit quasi impedit eius.</p>
+						</div>
+						<div class="details__box__items">
+							<h6>Performance</h6>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga modi repellat animi accusamus, non recusandae ducimus nam ipsam. Fugit mollitia quisquam officiis rem tempore quo temporibus, reprehenderit quasi impedit eius.</p>
+						</div>
+						<div class="details__box__items">
+							<h6>Clultral</h6>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga modi repellat animi accusamus, non recusandae ducimus nam ipsam. Fugit mollitia quisquam officiis rem tempore quo temporibus, reprehenderit quasi impedit eius.</p>
+						</div>
+						<div class="details__box__items">
+							<h6>Sustainability</h6>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga modi repellat animi accusamus, non recusandae ducimus nam ipsam. Fugit mollitia quisquam officiis rem tempore quo temporibus, reprehenderit quasi impedit eius.</p>
+						</div>
+					</div>
+				</div>	
+			</div>
+		</main>
 	</body>
 </html>
